demo/02-pod-livenessprobe-exec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-liveness-exec-pod
  namespace: qingyun
spec:
  containers:
  - name: demo-liveness-exec-container
    image: busybox:latest
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-c", "touch /tmp/healthy; sleep 60; rm -f /tmp/healthy; sleep 3600"]
    livenessProbe:
      exec:
        command: ["test","-e","/tmp/healthy"]
      initialDelaySeconds: 2   # 延迟探测
      periodSeconds: 3         # 间隔时间
      failureThreshold: 1      # 探测次数
