demo/04-pod-readinessprobe-httpget.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-readiness-httpget-pod
  namespace: qingyun
spec:
  containers:
  - name: demo-readiness-httpget-container
    image: zhangyyhub/myapp:v1.0
    imagePullPolicy: IfNotPresent
    readinessProbe:
      httpGet:
        port: 80
        path: /index.html
      initialDelaySeconds: 2   # 延迟探测
      periodSeconds: 3         # 间隔时间
      failureThreshold: 1      # 探测次数
