demo/07-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deploy
  namespace: qingyun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-deploy-pod
      release: canary
  template:
    metadata:
      labels:
        app: demo-deploy-pod
        release: canary
    spec:
      containers:
      - name: demo-deploy-pod-container
        image: zhangyyhub/myapp:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
