demo/08-daemonset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-redis
  namespace: qingyun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-pod-redis
      role: logstor
  template:
    metadata:
      labels:
        app: deploy-pod-redis
        role: logstor
    spec:
      containers:
      - name: deploy-pod-redis-container
        image: redis:4.0-alpine
        ports:
        - name: redis
          containerPort: 6379
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: demo-ds
  namespace: qingyun
spec:
  selector:
    matchLabels:
      app: demo-ds-pod-filebeat
      release: stable
  template:
    metadata:
      labels:
        app: demo-ds-pod-filebeat
        release: stable
    spec:
      containers:
      - name: demo-ds-pod-filebeat-container
        image: zhangyyhub/5.6.5-alpine:latest
