demo/14-storage-volume-hostPath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-hostpath
  namespace: qingyun
spec:
  containers:
  - name: myapp
    image: zhangyyhub/myapp:v1.0
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: data
    hostPath:
      path: /data/pod/myapp-volume/
      type: DirectoryOrCreate  # 不存在创建
