demo/15-storage-volume-nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-nfs
  namespace: qingyun
spec:
  containers:
  - name: myapp
    image: zhangyyhub/myapp:v1.0
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: data
    nfs:
      path: /data/volumes
      server: 172.16.107.104
