demo/17-storage-volume-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-pvc
  namespace: qingyun
spec:
  containers:
  - name: myapp
    image: zhangyyhub/myapp:v1.0
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: myapp-pvc
