demo/19-configMap-volumeMount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-cm-2
  namespace: qingyun
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: zhangyyhub/myapp:v1.0
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 80
    volumeMounts:
      - name: nginxconf
        mountPath: /etc/nginx/config.d/
        readOnly: true
  volumes:
  - name: nginxconf
    configMap:
      name: demo-cm
