demo/20-secret-generic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret-1
  namespace: qingyun
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: zhangyyhub/myapp:v1.0
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 80
