demo/11-ingress-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deploy
  namespace: qingyun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-deploy-pod
      release: canary
  template:
    metadata:
      labels:
        app: demo-deploy-pod
        release: canary
    spec:
      containers:
      - name: demo-deploy-pod-container
        image: zhangyyhub/myapp:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: demo-svc
  namespace: qingyun
spec:
  selector:
    app: demo-deploy-pod
    release: canary
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: qingyun
spec:
  ingressClassName: nginx
  rules:
    # 虚拟主机
  - host: myapp.qingyun.com
    # 定义前后端路径
    http:
      paths:
      - path: /
        backend:
          service:
            name: demo-svc
            port:
              number: 80
        pathType: Prefix
