demo/12-ingress-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: qingyun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat-deploy-pod
      release: canary
  template:
    metadata:
      labels:
        app: tomcat-deploy-pod
        release: canary
    spec:
      containers:
      - name: tomcat-deploy-pod-container
        image: tomcat:jre8-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: ajp
          containerPort: 8009

---
apiVersion: v1
kind: Service
metadata: 
  name: tomcat-svc
  namespace: qingyun
spec:
  selector:
    app: tomcat-deploy-pod
    release: canary
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: ajp
    port: 8009
    targetPort: 8009

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress-tls
  namespace: qingyun
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - tomcat.qingyun.com
    secretName: tomcat-secret
  rules:
    # 虚拟主机
  - host: tomcat.qingyun.com
    # 定义前后端路径
    http:
      paths:
      - path: /
        backend:
          service:
            name: tomcat-svc
            port:
              number: 8080
        pathType: Prefix
